/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'application'
    id 'idea'
    id "io.freefair.lombok" version "6.2.0"
    // https://github.com/qoomon/gradle-git-versioning-plugin
    id 'me.qoomon.git-versioning' version '6.1.1'
    // https://jreleaser.org/guide/latest/index.html
    id 'org.jreleaser' version '1.0.0'
}

group = 'com.github.itzg'
description = 'mc-image-helper'

version = '0.0.1-SNAPSHOT'
gitVersioning.apply {
    refs {
        tag('.+') {
            version = '${ref}'
        }
        branch('main') {
            version = '0.0.0-${describe.tag}-SNAPSHOT'
        }
        branch('.+') {
            version = '0.0.0-${ref}-SNAPSHOT'
        }
    }

    // optional fallback configuration in case of no matching ref configuration
    rev {
        version = '${commit}'
    }

}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
}

test {
    useJUnitPlatform()

    // Can set with -PmockServerLogLevel=info
    systemProperty 'mockServerLogLevel', findProperty('mockServerLogLevel') ?: 'warn'
}

application {
    mainClass = 'me.itzg.helpers.McImageHelper'
}

jreleaser {
    project {
        website = 'https://github.com/itzg/mc-image-helper'
        docsUrl = 'https://github.com/itzg/mc-image-helper'
        authors = ['Geoff Bourne']
        tags = ['cli']
        license = 'MIT'
        extraProperties.put('inceptionYear', '2021')
    }
    distributions {
        'mc-image-helper' {
            artifact {
                path = "build/distributions/{{projectName}}-{{projectVersion}}.tgz"
            }
            artifact {
                path = "build/distributions/{{projectName}}-{{projectVersion}}.zip"
            }
        }
    }
    release {
        github {
            //noinspection GroovyAccessibility
            owner = 'itzg'
            branch = 'master'
            prerelease {
                pattern = '.*-SNAPSHOT'
            }
            overwrite = project.version.map(v -> v.endsWith('-SNAPSHOT'))
            changelog {
                formatted = 'ALWAYS'
                preset = 'conventional-commits'
                labeler {
                    label = 'release'
                    title = '^Prepare next release '
                }
                labeler {
                    label = 'release'
                    title = '^Release '
                }
                category {
                    title = 'Internal'
                    labels = ['release']
                }
                hide {
                    categories = ['Internal']
                }
                contributors {
                    format = '- {{contributorName}}'
                }
            }
        }
    }
/* Something is broken in jreleaser and its logs don't explain what it is
   Example build failure https://github.com/itzg/mc-image-helper/runs/7073392053?check_suite_focus=true#step:6:84

    packagers {
        scoop {
            active = 'RELEASE'
            bucket {
                owner = 'itzg'
                name = 'scoop-bucket'
            }
        }
        brew {
            active = 'RELEASE'
            repoTap {
                owner = 'itzg'
                name = 'homebrew-tap'
            }
        }
    }
*/
}

project.tasks.distTar {
    compression = Compression.GZIP
}

idea {
    module {
        downloadJavadoc = true
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation(platform('com.fasterxml.jackson:jackson-bom:2.13.3'))
    implementation(platform('ch.qos.logback:logback-parent:1.3.0')) {
        because '1.4.+ requires Java 11 and we are stuck on 8'
        version {
            reject '1.4.+'
        }
    }

    implementation('ch.qos.logback:logback-core')
    implementation 'ch.qos.logback:logback-classic'
    implementation "info.picocli:picocli:${picocliVersion}"
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.jayway.jsonpath:json-path:2.7.0'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
    implementation 'io.projectreactor.netty:reactor-netty-http:1.0.22'
    implementation 'org.apache.maven:maven-artifact:3.8.5'

    testImplementation 'org.assertj:assertj-core:3.23.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.7.0'
    testImplementation 'org.mock-server:mockserver-junit-jupiter:5.14.0'
    // https://github.com/stefanbirkner/system-lambda
    testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'

    annotationProcessor "info.picocli:picocli-codegen:${picocliVersion}"
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
}

